fix : 사진 더블 클릭 시 헤더가 사라지는 이슈 z-index 조정하여 수정

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,6 +91,7 @@ a:link, a:visited {
   align-items: center;
   position: sticky;
   top: 0;
+  z-index: 1;
   background-color: #ffffff;
 }
 
